codestyle: List.of / Set.of (Java 9)